# onesdk

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  LICENSE.txt  README.md  README.zh_CN.md  WINDOWS_BUILD_ISSUES.md  WINDOWS_BUILD_SUPPORT.md  build.bat  build.ps1  build.sh  components_onesdk.txt  libwebsockets_cmakelists.txt
.github/workflows/: ci.yml  release.yml
cmake/: onesdk_config.h.in
docs/: apidocs.md  develop.md  develop.zh_CN.md  develop_windows.md  develop_windows.zh_CN.md  guide.md  using_prebuilt_libs.md
examples/: CMakeLists.txt
examples/aigw_auth_client/: CMakeLists.txt  main.c
examples/chat/chatbot/: CMakeLists.txt  main_chatbot.c
examples/chat/function_call/: CMakeLists.txt  main_function_call.c
examples/chat/mcp/: CMakeLists.txt  main_mcp.c
examples/chat/text_image/: CMakeLists.txt  main_text_image.c
examples/http/: CMakeLists.txt  main.c
examples/iot_dynamic_register/: CMakeLists.txt  dynreg.h  main.c
examples/iot_mqtt/: CMakeLists.txt  iot_mqtt_client.c
examples/onesdk_esp32/: .gitignore  CMakeLists.txt  README.md  libwebsockes-diff.diff  libwebsockets  sdkconfig.defaults  sdkconfig.defaults.esp32s3
examples/onesdk_esp32/main/: CMakeLists.txt  chat.c  chat.h  idf_component.yml  realtime_main.c  sntp_example_main.c  sntp_example_main.h  station_example_main.c
examples/onesdk_esp32_audio/: .gitignore  CMakeLists.txt  README.md  sdkconfig.defaults
examples/onesdk_esp32_audio/components/audio_processor/: CMakeLists.txt  audio_processor.c  audio_stream_dual_microphones.c  audio_stream_single_microphone.c
examples/onesdk_esp32_audio/main/: CMakeLists.txt  Kconfig.projbuild  audio_utils.c  audio_utils.h  config.h  main.c  onesdk_main.c  onesdk_main.h  sntp_example_main.h
examples/onesdk_iot/: CMakeLists.txt  onesdk_iot.c
examples/onesdk_realtime/: CMakeLists.txt
examples/onesdk_realtime/chat_agent/: CMakeLists.txt  main.c
examples/onesdk_realtime/translation/: CMakeLists.txt  main.c
examples/raw_http_chat/: CMakeLists.txt  chat_user_lowlevel.c  hello_world.h  hello_world_https.c  llm_gw.c  onesdk_hello_world.h  openai.c  simple_http_server.py
examples/ws-client/: CMakeLists.txt  ws_client.c
external_libs/: CMakeLists.txt
include/: error_code.h  infer_inner_chat.h  infer_realtime_webrtc.h  infer_realtime_ws.h  iot_basic.h  iot_log.h  iot_mqtt.h  mcp_client.h  onesdk.h  onesdk_chat.h  platform_compat.h  platform_thread.h  volc_ca.h
include/aigw/: auth.h  llm.h
include/iot/: iot_kv.h  iot_ota_api.h  iot_ota_header.h  iot_ota_utils.h  iot_popen.h  iot_utils.h  log_report.h
include/protocols/: http.h  private_http_libs.h  private_lws_http_client.h  private_lws_http_download.h  private_lws_http_upload.h
include/thing_model/: custom_topic.h  device_delay.h  event.h  gateway.h  iot_ntp.h  iot_tm_api.h  iot_tm_header.h  property.h  service.h  shadow.h  webshell.h
libs/include/: lws_config.h  lws_config_private.h
platform/plat/: alloc.c  alloc.h  platform.c  platform.h  util.c  util.h
scripts/: add_license_header.py  copy_onesdk_src.sh  fix_cmake_syntax.py  fix_cmake_versions.py  merge_junit.sh  replace_sensitive.py  run_test.sh  test_cmake_config.py  test_windows_build.py  update_windows_support.py
src/: infer_inner_chat.c  infer_realtime_ws.c  iot_basic.c  mcp_client.c  onesdk.c  onesdk_chat.c  onesdk_iot.c  onesdk_rt.c
src/aigw/: auth.c  llm.c
src/aws/common/: allocator.c  allocator.h  array_list.c  array_list.h  assert.c  assert.h  atomics.c  atomics.h  byte_buf.c  byte_buf.h  byte_order.c  byte_order.h  clock.c  clock.h  common.c  common.h  data_time.c  date_time.h  encoding.c  encoding.h  error.c  error.h  hash_table.c  hash_table.h  json.c  json.h  linked_list.c  linked_list.h  math.c  math.h  stdbool.h  stdint.h  string.c  string.h  time.c  time.h  utils.c  utils.h  zero.c
src/aws/common/private/: array_list.h  byte_buf.h  hash_table_impl.h  json_impl.h  lookup3.inl
src/iot/: dynreg.c  dynreg.h  iot_kv.c  iot_mqtt.c  iot_popen.c  iot_utils.c
src/iot/log/: iot_log.c  iot_log_report.c
src/iot/ota/: iot_ota_api.c  iot_ota_utils.c
src/iot/thingmodel/: custom_topic.c  device_delay.c  event.c  gateway.c  iot_ntp.c  iot_tm_api.c  property.c  service.c  shadow.c  webshell.c
src/protocols/: http.c  http_libs.c  lws_http_client.c  lws_http_download.c  lws_http_upload.c
src/util/: aes.c  aes.h  aes_decode.c  aes_decode.h  aws_json.c  aws_json.h  hmac_sha256.c  hmac_sha256.h  md5.c  md5.h  sha256.c  sha256.h  util.c  util.h
tests/: CMakeLists.txt  run_all_tests.cpp
tests/auth/: auth_test.cpp
tests/dynreg/: dynreg_test.cpp
tests/iot_basic/: iot_basic_test.cpp
tests/llm_config/: llm_config_test.cpp
tests/onesdk_rt/: onesdk_rt_test.cpp
tests/plat/: plat_hardware_id_test.cpp
tests/util/: util_test.cpp
